grammar.js
        source_file: $ => repeat($._statement),

        _statement: $ =>
            seq(
                choice(
                    $.alter_keyspace,
                    $.alter_materialized_view,
                    $.alter_role,
                    $.alter_table,
                    $.alter_type,
                    $.alter_user,
                    $.apply_batch,
                    $.create_aggregate,
                    $.create_function,
                    $.create_index,
                    $.create_keyspace,
                    $.create_materialized_view,
                    $.create_role,
                    $.create_table,
                    $.create_trigger,
                    $.create_type,
                    $.create_user,
                    $.delete_statement,
                    $.drop_aggregate,
                    $.drop_function,
                    $.drop_index,
                    $.drop_keyspace,
                    $.drop_materialized_view,
                    $.drop_role,
                    $.drop_table,
                    $.drop_trigger,
                    $.drop_type,
                    $.drop_user,
                    $.grant,
                    $.insert_statement,
                    $.list_permissions,
                    $.list_roles,
                    $.revoke,
                    $.select_statement,
                    $.truncate,
                    $.update,
                    $.use,
                ),
                optional(";"),
            ),

        constant: $ =>
            choice(
                $.decimal_literal,
                $.float_literal,
                $.hexadecimal_literal,
                $.boolean_literal,
                $.code_block,
                kw("NULL"),
                $._string_literal,
                $.uuid,
            ),
        _string_literal: $ => token(string_str),
        decimal_literal : $ =>  token( decimal_str ),
        boolean_literal : $ => token(choice( kw("TRUE"), kw("FALSE"))),
        code_block : $ => token( code ),
        relation_element : $=>
            choice (
                seq(
                    choice(
                        dotted_name( $.object_name, $.object_name, "table" ),
                        $.function_call
                    ),
                    field("operator", choice("<", "<=", "<>", "=", ">", ">=")),
                    $.constant,
                ),
                seq(
                    $.function_call,
                    field("operator", choice("<", "<=", "<>", "=", ">", ">=")),
                    $.function_call,
                ),
                seq(
                    $.object_name,
                    kw("IN"),
                    "(",
                     $.function_args,
                    ")",
                ),
                seq(
                    "(",
                    commaSep1( $.object_name ),
                    ")",
                    kw("IN"),
                    "(",
                    commaSep1($.assignment_tuple),
                    ")",
                ),
                seq(
                    "(",
                    commaSep1( $.object_name ),
                    ")",
                    field("operator", choice("<", "<=", "<>", "=", ">", ">=")),
                    commaSep1($.assignment_tuple),
                ),
                $.relation_contains_key,
                $.relation_contains,
            ),
        column_list : $ => commaSep1( alias( $.object_name, "column")),
        create_aggregate : $ =>
            seq(
                kw("CREATE"),
                optional( or_replace ),
                kw("AGGREGATE"),
                optional( if_not_exists ),
                dotted_name( $.object_name, $.object_name, "aggregate"),
                "(",
                $.data_type,
                ")",
                kw( "SFUNC"),
                alias( $.object_name, "sfunc"),
                kw( "STYPE"),
                $.data_type,
                kw( "FINALFUNC"),
                alias( $.object_name, "finalfunc"),
                kw("INITCOND"),
                $.init_cond_definition,
            ),
        init_cond_definition : $ =>
            choice(
                $.constant,
                $.init_cond_list,
                $.init_cond_list_nested,
                $.init_cond_hash,
            ),
        init_cond_list : $ => seq( "(", commaSep1( $.constant), ")"),
        create_materialized_view : $ =>
            seq(
                kw("CREATE"),
                kw("MATERIALIZED"),
                kw("VIEW"),
                optional( if_not_exists),
                dotted_name( $.object_name, $.object_name, "materialized_view"),
                kw( "AS"),
                kw( "SELECT"),
                $.column_list,
                kw( "FROM"),
                dotted_name( $.object_name, $.object_name, "table"),
                $.materialized_view_where,
                kw( "PRIMARY"),
                kw( "KEY"),
                "(",
                $.column_list,
                ")",
                optional( seq( kw("WITH"), $.materialized_view_options)),
            ),
        materialized_view_where : $ =>
            seq(
                kw("WHERE"),
                $.column_not_null_list,
                optional( seq( kw("AND"), $.relation_element)),
            ),
        column_not_null : $ => seq( alias($.object_name, "column"), kw("IS"), kw("NOT"), kw("NULL")),
        materialized_view_options : $ =>
            choice(
                $.table_options,
                seq( $.table_options, kw("AND"), $.clustering_order ),
                $.clustering_order
            ),
        create_function : $ =>
            seq(
                kw("CREATE"),
                optional( or_replace ),
                kw( "FUNCTION"),
                optional( if_not_exists ),
                dotted_name( $.object_name, $.object_name, "function"),
                "(",
                optional( commaSep1( $.param ) ),
                ")",
                $.return_mode,
                kw( "RETURNS"),
                $.data_type,
                kw("LANGUAGE"),
                alias( $.object_name, "language"),
                kw( "AS"),
                $.code_block,
            ),
        param : $ =>
            seq(
                alias( $.object_name, "param_name"),
                $.data_type
            ),
        data_type : $ => seq( $.data_type_name, optional($.data_type_definition)),
        data_type_name : $ =>
            choice (
                $.object_name,
                kw( "TIMESTAMP"),
                kw( "SET"),
                kw( "ASCII"),
                kw( "BIGINT"),
                kw( "BLOB"),
                kw( "BOOLEAN"),
                kw( "COUNTER"),
                kw( "DATE"),
                kw( "DECIMAL"),
                kw( "DOUBLE"),
                kw( "FLOAT"),
                kw( "FROZEN"),
                kw( "INET"),
                kw( "INT"),
                kw( "LIST"),
                kw( "MAP"),
                kw( "SMALLINT"),
                kw( "TEXT"),
                kw( "TIME"),
                kw( "TIMEUUID"),
                kw( "TINYINT"),
                kw( "TUPLE"),
                kw( "VARCHAR"),
                kw( "VARINT"),
                kw( "TIMESTAMP"),
                kw( "UUID"),
            ),
        data_type_definition : $ => seq( "<", commaSep1( $.data_type_name), ">"),
        return_mode : $ =>
            seq(
                choice(
                    kw("CALLED"),
                    seq(
                        kw( "RETURNS"),
                        kw( "NULL"),
                    ),
                ),
                kw( "ON"),
                kw( "NULL"),
                kw( "INPUT"),
            ),
        replication_list_item : $ =>
            choice(
                seq( $._string_literal, ":", $._string_literal),
                seq( $._string_literal, ":", $.decimal_literal),
            ),
        durable_writes : $ =>
            seq(
                kw("DURABLE_WRITES"),
                "=",
                $.boolean_literal,
            ),
        create_role : $ =>
            seq(
                kw("CREATE"),
                kw("ROLE"),
                optional( if_not_exists),
                alias( $.object_name, "role"),
                optional( $.role_with ),
            ),
        role_with : $ => seq( kw("WITH"), commaSep1( $.role_with_options)),
        role_with_options : $ =>
            choice(
                seq( kw("PASSWORD"), "=", $._string_literal),
                seq( kw("LOGIN"), "=", $.boolean_literal),
                seq( kw("SUPERUSER"), "=", $.boolean_literal),
                seq( kw("OPTIONS"), "=", $.option_hash),
            ),
        option_hash : $ => seq( "(", commaSep1( $.option_hash_item), ")"),
        option_hash_item : $ => seq( $._string_literal, ":", choice( $._string_literal, $.float_literal), ")"),
        table_options : $ => prec.left(PREC.and,sep1( $.table_option_item, kw("AND"))),
        table_option_item : $ =>
            choice(
                seq( $.table_option_name, "=", $.table_option_value ),
                seq( $.table_option_name, "=", $.option_hash ),
            ),
        table_option_name : $ => alias( $.object_name, "option"),
        table_option_value : $ => choice( $._string_literal, $.float_literal ),
        clustering_order : $ =>
            seq(
                kw("CLUSTERING"),
                kw( "ORDER"),
                kw( "BY"),
                "(",
                alias( $.object_name, "column" ),
                optional( $.order_direction ),
                ")",
            ),
        order_direction : $ => choice( kw( "ASC"), kw("DESC")),
        alter_materialized_view : $ =>
            seq(
                kw("ALTER"),
                kw( "MATERIALIZED"),
                kw( "VIEW"),
                dotted_name( $.object_name, $.object_name, "materialized_view"),
                optional( seq( kw("WITH"), $.table_options))
            ),
        alter_keyspace : $ =>
            seq(
                kw("ALTER"),
                kw( "KEYSPACE"),
                alias( $.object_name, "keyspace"),
                kw("WITH"),
                kw("REPLICATION"),
                "=",
                "{",
                $.replication_list,
                "}",
                optional( seq( kw("AND"),$.durable_writes) ),
            ),
        replication_list : $ => commaSep1( $.replication_list_item ),
        alter_role : $ =>
            seq(
                kw("ALTER"),
                kw( "ROLE"),
                alias( $.object_name, "role"),
                optional( $.role_with ),
            ),
        alter_table : $ =>
            seq(
                kw("ALTER"),
                kw( "TABLE"),
                dotted_name( $.object_name, $.object_name, "table"),
                $.alter_table_operation,
            ),
        alter_table_operation : $ =>
            choice(
                $.alter_table_add,
                $.alter_table_drop_columns,
                $.alter_table_drop_compact_storage,
                $.alter_table_rename,
                $.alter_table_with,
            ),
        alter_table_add : $ => seq( kw("ADD"), $.alter_table_column_definition ),
        alter_table_column_definition : $ => commaSep1( seq( alias( $.object_name, "column"), $.data_type)),
        alter_table_drop_columns : $ => seq( kw("DROP"), $.alter_table_drop_column_list ),
        alter_table_drop_column_list : $ => commaSep1( alias( $.object_name, "column") ),
        alter_table_drop_compact_storage : $ => seq( kw("DROP"), kw("COMPACT"), kw("STORAGE") ),
        alter_table_rename : $ => seq( kw("RENAME"), alias( $.object_name, "column"), kw("TO"), alias( $.object_name, "column") ),
        alter_table_with : $ => seq( kw("WITH"), $.table_options ),
        alter_type : $ =>
            seq(
                kw("ALTER"),
                kw( "TYPE"),
                dotted_name( $.object_name, $.object_name, "type"),
                $.alter_type_operation,
            ),
        alter_type_operation : $ =>
            choice(
                $.alter_type_alter_type,
                $.alter_type_add,
                $.alter_type_rename,
            ),
        alter_type_alter_type : $ =>
            seq(
                kw("ALTER"),
                alias( $.object_name, "column"),
                kw("TYPE"),
                $.data_type,
            ),
        alter_type_add : $ =>
            seq(
                kw("ADD"),
                commaSep1( seq(alias( $.object_name, "column"), $.data_type,)),
            ),
        alter_type_rename : $ => seq( kw("RENAME"), $.alter_type_rename_list ),
        alter_type_rename_list : $ => sep1( $.alter_type_rename_item, kw( "AND")),
        alter_type_rename_item : $ => seq( alias( $.object_name, "column"), kw("TO"), alias( $.object_name, "column") ),
        object_name : $ => token( choice( name_chars, seq(squote, name_chars, squote))),
    },
});

function kw(keyword) {
    if (keyword.toUpperCase() != keyword) {
        throw new Error(`Expected upper case keyword got ${keyword}`);
    }
    const words = keyword.split(" ");
    const regExps = words.map(createCaseInsensitiveRegex);

    if (regExps.length == 1) {
        return alias(regExps[0], keyword);
    } else {
        return alias(seq(...regExps), keyword.replace(/ /g, "_"));
    }
}

function createCaseInsensitiveRegex(word) {
    return new RegExp(
        word
            .split("")
            .map(letter => `[${letter.toLowerCase()}${letter.toUpperCase()}]`)
            .join(""),
    );
}

function commaSep1(rule) {
    return sep1(rule, ",");
}

function sep1(rule, separator) {
    return seq(rule, repeat(seq(separator, rule)));
}

function dotted_name(rule1, rule2, name) {
    return choice(
        seq( alias( rule1, "keyspace"),
            ".", alias(rule2, name)),
        alias( rule2, name ),
    )
}
