test/corpus/alterRole.cql
================================================================================
ALTER ROLE coach WITH PASSWORD='bestTeam';
================================================================================
ALTER ROLE coach WITH PASSWORD='bestTeam';
--------------------------------------------------------------------------------

(source_file
  (alter_role
    (role_with
      (role_with_options
        (string_literal)))))
