test/corpus/createMaterializedView.cql
================================================================================
CREATE MATERIALIZED VIEW view AS SELECT col1, col2 FROM tbl WHERE col3 IS NOT NULL PRIMARY KEY (col1);
================================================================================
CREATE MATERIALIZED VIEW view AS SELECT col1, col2 FROM tbl WHERE col3 IS NOT NULL PRIMARY KEY (col1);
--------------------------------------------------------------------------------
(source_file (create_materialized_view (column_list) (materialized_view_where (column_not_null (object_name)))))

================================================================================
CREATE MATERIALIZED VIEW keyspace.view AS SELECT col1, col2 FROM ks_target.tbl_target WHERE col3 IS NOT NULL AND col3 IS NOT NULL PRIMARY KEY (col1)
================================================================================
CREATE MATERIALIZED VIEW keyspace.view AS SELECT col1, col2 FROM ks_target.tbl_target WHERE col3 IS NOT NULL AND col3 IS NOT NULL PRIMARY KEY (col1)
--------------------------------------------------------------------------------
(source_file (create_materialized_view (column_list) (materialized_view_where (column_not_null (object_name)) (column_not_null (object_name)))))

================================================================================
CREATE MATERIALIZED VIEW keyspace.view AS SELECT col1, col2 FROM ks_target.tbl_target WHERE col3 IS NOT NULL AND col3 IS NOT NULL PRIMARY KEY (col1) WITH option1 = 'option';
================================================================================
CREATE MATERIALIZED VIEW keyspace.view AS SELECT col1, col2 FROM ks_target.tbl_target WHERE col3 IS NOT NULL AND col3 IS NOT NULL PRIMARY KEY (col1) WITH option1 = 'option';
--------------------------------------------------------------------------------
(source_file (create_materialized_view (column_list) (materialized_view_where (column_not_null (object_name)) (column_not_null (object_name))) (materialized_view_options (table_option_item (table_option_name) (table_option_value)))))


================================================================================
CREATE MATERIALIZED VIEW keyspace.view AS SELECT col1, col2 FROM ks_target.tbl_target WHERE col3 IS NOT NULL AND col3 IS NOT NULL PRIMARY KEY (col1) WITH option1 = 'option' AND CLUSTERING ORDER BY (col2 DESC);
================================================================================
CREATE MATERIALIZED VIEW keyspace.view AS SELECT col1, col2 FROM ks_target.tbl_target WHERE col3 IS NOT NULL AND col3 IS NOT NULL PRIMARY KEY (col1) WITH option1 = 'option' AND CLUSTERING ORDER BY (col2 DESC);
--------------------------------------------------------------------------------
(source_file (create_materialized_view (column_list) (materialized_view_where (column_not_null (object_name)) (column_not_null (object_name))) (materialized_view_options (table_option_item (table_option_name) (table_option_value)) (clustering_order (order_direction)))))

================================================================================
CREATE MATERIALIZED VIEW keyspace.view AS SELECT col1, col2 FROM ks_target.tbl_target WHERE col3 IS NOT NULL AND col4 IS NOT NULL AND col5 <> 'foo' PRIMARY KEY (col1) WITH option1 = 'option' AND option2 = 3.5 AND CLUSTERING ORDER BY (col2 DESC);
================================================================================
CREATE MATERIALIZED VIEW keyspace.view AS SELECT col1, col2 FROM ks_target.tbl_target WHERE col3 IS NOT NULL AND col4 IS NOT NULL AND col5 <> 'foo' PRIMARY KEY (col1) WITH option1 = 'option' AND option2 = 3.5 AND CLUSTERING ORDER BY (col2 DESC);
--------------------------------------------------------------------------------
(source_file (create_materialized_view (column_list) (materialized_view_where (column_not_null (object_name)) (column_not_null (object_name)) (relation_element (object_name) (constant))) (materialized_view_options (table_option_item (table_option_name) (table_option_value)) (table_option_item (table_option_name) (table_option_value)) (clustering_order (order_direction)))))


================================================================================
CREATE MATERIALIZED VIEW keyspace.view AS SELECT col1, col2 FROM ks_target.tbl_target WHERE col3 IS NOT NULL AND col4 IS NOT NULL AND col5 <> 'foo' PRIMARY KEY (col1) WITH CLUSTERING ORDER BY (col2 DESC);
================================================================================
CREATE MATERIALIZED VIEW keyspace.view AS SELECT col1, col2 FROM ks_target.tbl_target WHERE col3 IS NOT NULL AND col4 IS NOT NULL AND col5 <> 'foo' PRIMARY KEY (col1) WITH CLUSTERING ORDER BY (col2 DESC);
--------------------------------------------------------------------------------
(source_file (create_materialized_view (column_list) (materialized_view_where (column_not_null (object_name)) (column_not_null (object_name)) (relation_element (object_name) (constant))) (materialized_view_options (clustering_order (order_direction)))))

================================================================================
CREATE MATERIALIZED VIEW keyspace.view AS SELECT col1, col2 FROM ks_target.tbl_target WHERE col3 IS NOT NULL AND col4 IS NOT NULL AND col5 <> 'foo' PRIMARY KEY (col1) WITH option1 = 'option' AND option2 = 3.5;
================================================================================
CREATE MATERIALIZED VIEW keyspace.view AS SELECT col1, col2 FROM ks_target.tbl_target WHERE col3 IS NOT NULL AND col4 IS NOT NULL AND col5 <> 'foo' PRIMARY KEY (col1) WITH option1 = 'option' AND option2 = 3.5;
--------------------------------------------------------------------------------
(source_file (create_materialized_view (column_list) (materialized_view_where (column_not_null (object_name)) (column_not_null (object_name)) (relation_element (object_name) (constant))) (materialized_view_options (table_option_item (table_option_name) (table_option_value)) (table_option_item (table_option_name) (table_option_value)))))


================================================================================
CREATE MATERIALIZED VIEW keyspace.view AS SELECT col1, col2 FROM ks_target.tbl_target WHERE col3 IS NOT NULL AND col4 IS NOT NULL AND col5 <> 'foo' PRIMARY KEY (col1);
================================================================================
CREATE MATERIALIZED VIEW keyspace.view AS SELECT col1, col2 FROM ks_target.tbl_target WHERE col3 IS NOT NULL AND col4 IS NOT NULL AND col5 <> 'foo' PRIMARY KEY (col1);
--------------------------------------------------------------------------------
(source_file (create_materialized_view (column_list) (materialized_view_where (column_not_null (object_name)) (column_not_null (object_name)) (relation_element (object_name) (constant))) ))

================================================================================
CREATE MATERIALIZED VIEW keyspace.view AS SELECT col1, col2 FROM ks_target.tbl_target WHERE col3 IS NOT NULL PRIMARY KEY (col1,col2)
================================================================================
CREATE MATERIALIZED VIEW keyspace.view AS SELECT col1, col2 FROM ks_target.tbl_target WHERE col3 IS NOT NULL PRIMARY KEY (col1,col2)
--------------------------------------------------------------------------------
(source_file (create_materialized_view (column_list) (materialized_view_where (column_not_null (object_name))) ))


================================================================================
CREATE MATERIALIZED VIEW keyspace.view AS SELECT col1, col2, col3  FROM keyspace.table  WHERE col1 IS NOT NULL AND col4 IS NOT NULL PRIMARY KEY (col1, col4)
   WITH caching = { 'keys' : 'ALL', 'rows_per_partition' : '100' } AND comment = 'Based on table' ;
================================================================================
CREATE MATERIALIZED VIEW keyspace.view AS SELECT col1, col2, col3  FROM keyspace.table  WHERE col1 IS NOT NULL AND col4 IS NOT NULL PRIMARY KEY (col1, col4)
                                          WITH caching = { 'keys' : 'ALL', 'rows_per_partition' : '100' } AND comment = 'Based on table' ;
--------------------------------------------------------------------------------
(source_file (create_materialized_view (column_list) (materialized_view_where (column_not_null (object_name)) (column_not_null (object_name))) (materialized_view_options (table_option_item (table_option_name) (option_hash (option_hash_item) (option_hash_item))) (table_option_item (table_option_name) (table_option_value)))))
