test/corpus/createRole.cql
================================================================================
CREATE ROLE if not exists role;
================================================================================
CREATE ROLE if not exists role;
--------------------------------------------------------------------------------

(source_file
  (create_role
    (role_name)))

================================================================================
CREATE ROLE 'role';
================================================================================
CREATE ROLE 'role';
--------------------------------------------------------------------------------

(source_file
  (create_role
    (role_name)))

================================================================================
CREATE ROLE 'role' WITH PASSWORD = 'password';
================================================================================
CREATE ROLE 'role' WITH PASSWORD = 'password';
--------------------------------------------------------------------------------

(source_file
  (create_role
    (role_name)
    (role_with
      (role_with_option))))

================================================================================
CREATE ROLE 'role' WITH PASSWORD = 'password' AND LOGIN=false;
================================================================================
CREATE ROLE 'role' WITH PASSWORD = 'password' AND LOGIN=false;
--------------------------------------------------------------------------------

(source_file
  (create_role
    (role_name)
    (role_with
      (role_with_option)
      (role_with_option))))

================================================================================
CREATE ROLE 'role' WITH SUPERUSER=false;
================================================================================
CREATE ROLE 'role' WITH SUPERUSER=false;
--------------------------------------------------------------------------------

(source_file
  (create_role
    (role_name)
    (role_with
      (role_with_option))))

================================================================================
CREATE ROLE 'role' WITH OPTIONS={ 'foo' : 3.14, 'bar' : 'pi' }
================================================================================
CREATE ROLE 'role' WITH OPTIONS={ 'foo' : 3.14, 'bar' : 'pi' }
--------------------------------------------------------------------------------

(source_file
  (create_role
    (role_name)
    (role_with
      (role_with_option
        (option_hash
          (option_hash_item)
          (option_hash_item))))))
